--- a/geekStore.csproj
+++ b/geekStore.csproj
@@ -63,6 +63,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\controller.cs" />
+    <Compile Include="frmCadCli.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCadCli.Designer.cs">
+      <DependentUpon>frmCadCli.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmCadProd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCadProd.Designer.cs">
+      <DependentUpon>frmCadProd.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +96,12 @@
     <Compile Include="Models\models.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmCadCli.resx">
+      <DependentUpon>frmCadCli.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCadProd.resx">
+      <DependentUpon>frmCadProd.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -95,18 +113,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -127,6 +145,17 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>dbGeekStore.mdf</DependentUpon>
     </Content>
+    <None Include="Resources\eye_closed_30.png" />
+    <None Include="Resources\eye_open_30.png" />
+    <None Include="Resources\register_303.png" />
+    <None Include="Resources\register_30.png" />
+    <None Include="Resources\forgot_password_20.png" />
+    <None Include="Resources\close_30.png" />
+    <None Include="Resources\login_30.png" />
+    <None Include="Resources\login_20.png" />
+    <None Include="Resources\password_30.png" />
+    <None Include="Resources\user_30.png" />
+    <None Include="Resources\user_20.png" />
     <None Include="Resources\user.png" />
   </ItemGroup>
   <ItemGroup>
