--- a/App.config
+++ b/App.config
@@ -3,4 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+
+    <connectionStrings>
+		<add 
+			name="dbGeekStore" 
+	        connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|dbGeekStore.mdf;Integrated Security=True;"
+	        providerName="System.Data.SqlClient" />
+      </connectionStrings>
 </configuration>
