--- a/geekStore.csproj
+++ b/geekStore.csproj
@@ -85,6 +85,12 @@
     <Compile Include="frmDemonstrativo.Designer.cs">
       <DependentUpon>frmDemonstrativo.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmEsqSenha.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmEsqSenha.Designer.cs">
+      <DependentUpon>frmEsqSenha.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +139,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMenu.resx">
       <DependentUpon>frmMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSobre.resx">
+      <DependentUpon>frmSobre.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSplash.resx">
       <DependentUpon>frmSplash.cs</DependentUpon>
