Commit aula 27/11/2024 - Senai

--- a/App.config
+++ b/App.config
@@ -5,9 +5,11 @@
     </startup>
 
     <connectionStrings>
-		<add 
+		<add
 			name="dbGeekStore" 
-	        connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|dbGeekStore.mdf;Integrated Security=True;"
-	        providerName="System.Data.SqlClient" />
-    </connectionStrings>
+			connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Aluno\source\repos\PedroWatermann\geekStore\dbGeekStore.mdf;Integrated Security=True;"
+			providerName="System.Data.SqlClient" />
+		</connectionStrings>
 </configuration>
+
+<!--connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|dbGeekStore.mdf;Integrated Security=True;"-->
