--- a/App.config
+++ b/App.config
@@ -6,10 +6,11 @@
 
     <connectionStrings>
 		<add
-			name="dbGeekStore" 
-			connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Aluno\source\repos\PedroWatermann\geekStore\dbGeekStore.mdf;Integrated Security=True;"
+			name="dbGeekStore"
+			connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|dbGeekStore.mdf;Integrated Security=True;"
 			providerName="System.Data.SqlClient" />
 		</connectionStrings>
 </configuration>
 
-<!--connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|dbGeekStore.mdf;Integrated Security=True;"-->
+<!-- Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|dbGeekStore.mdf;Integrated Security=True; -->
+<!-- Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\pedro\source\repos\PedroWatermann\geekStore\dbGeekStore.mdf;Integrated Security=True; -->
